# react-native-fast-video

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-fast-video.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastvideo/: FastVideoModule.java  FastVideoPackage.java  FastVideoView.java  FastVideoViewManager.java
android/src/newarch/: FastVideoSpec.java  FastVideoViewManagerSpec.java
android/src/oldarch/: FastVideoSpec.java  FastVideoViewManagerSpec.java
cpp/: react-native-fast-video.cpp  react-native-fast-video.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/fastvideoexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/FastVideoExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FastVideoExample.xcodeproj/: project.pbxproj
example/ios/FastVideoExample.xcodeproj/xcshareddata/xcschemes/: FastVideoExample.xcscheme
example/ios/FastVideoExampleTests/: FastVideoExampleTests.m
example/src/: App.tsx
ios/: FastVideo.h  FastVideo.mm
src/: FastVideoViewNativeComponent.ts  NativeFastVideo.ts  index.tsx
